--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,11 @@
 			<artifactId>spring-tx</artifactId>
 			<version>3.1.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>3.2.0.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
