--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,15 @@
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/test
 db.username=root
-db.password=bittsy
+#Home
+#db.password=bittsy
+#Work
+db.password=s3cret
 
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.format_sql=true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=update
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=true
 
