Removed Dao implementation Removed repository.saveAndFlush to update. Added @Transactional for the testUpdate test Added @Rollback annotation and set to false so that the test doesnt rollback after the update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/test
 db.username=root
 #Home
-db.password=bittsy
+#db.password=bittsy
 #Work
-#db.password=s3cret
+db.password=s3cret
 
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
